--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/firefly.css">
 <script src="js/catgirl.js"></script>
 <link rel="icon" href="images/favicon.webp">
-<title id="title-name">sipher</title>
+<title id="title-name">nick</title>
 <meta id="meta-name" property="og:title" content="                    ♡">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://sipher.sh">
