--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <title id="title-name">nick</title>
 <meta id="meta-name" property="og:title" content="                    ♡">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://sipher.sh">
+<meta property="og:url" content="https://faggots.cf">
 <meta id="meta-image" property="og:image" content="images/loader_1.gif">
 <meta content="sipher.sh" property="og:site_name">
 <meta name="theme-color" content="#2f3136">
