--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <link rel="stylesheet" href="domain/assets/css/firefly.css">
 <script src="domain/assets/js/catgirl.js"></script>
 <link rel="icon" href="domain/assets/media/favicon.webp.html">
-<title id="title-name">sipher</title>
+<title id="title-name">zz</title>
 <meta id="meta-name" property="og:title" content="                    ♡">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://sipher.sh">
-<meta id="meta-image" property="og:image" content="https://sipher.sh/domain/assets/assets/loader.gif">
+<meta property="og:url" content="https://faggots.cf">
+<meta id="meta-image" property="og:image" content="https://reported.cf/domain/assets/assets/loader.gif">
 <meta content="sipher.sh" property='og:site_name'>
 <meta name="theme-color" content="#2f3136">
 <style>
