--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <div id="card-title" style="color: #fff;" class="card-title"></div>
 <div id="card-user-profile" style="color: #fff;" class="user-profile">
 <div class="Profile-pic">
-<img title="click to play music" class="card-pfp" id="pfp" src="https://sipher.sh/assets/loader.gif" alt="">
+<img title="click to play music" class="card-pfp" id="pfp" src="https://reported.cf/assets/loader.gif" alt="">
 <div class="card-activity-dot" style="color: #fff;" id="activity-dot" aria-label="Unknown"></div>
 </div>
 <div class="user-info">
