--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 <div class="card-status" style="color: #fff;" id="status"></div>
 <div class="card-status2" style="color: #fff;" id="status2"></div>
 <div class="connections">
-<a title="fsipher" href="https://instagram.com/fsipher"><img class="connection-icon" src="domain/assets/assets/connections/ig.svg" alt=""></a>
+<a title="tsertseness" href="https://instagram.com/tsertseness"><img class="connection-icon" src="domain/assets/assets/connections/ig.svg" alt=""></a>
 <a id="connection-username" title="" href="https://discord.com/users/160279076727160832/"><img class="connection-icon" src="domain/assets/assets/connections/discord.svg" alt=""></a>
-<a title="sipher3" href="https://github.com/sipher3/"><img class="connection-icon" src="domain/assets/assets/connections/github.svg" alt=""></a>
-<a title="siph3r" href="https://t.me/siph3r"><img class="connection-icon" src="domain/assets/assets/connections/telegram.svg" alt=""></a>
-<a title="siph4r" href="https://twitter.com/siph4r"><img class="connection-icon" src="domain/assets/assets/connections/twitter.svg" alt=""></a>
-<a title="@knee" href="https://tiktok.com/@knee"><img class="connection-icon" src="domain/assets/assets/connections/tiktok.svg" alt=""></a>
+<a title="marketplacess" href="https://github.com/marketplacess/"><img class="connection-icon" src="domain/assets/assets/connections/github.svg" alt=""></a>
+<a title="dualhooked" href="https://t.me/dualhooked"><img class="connection-icon" src="domain/assets/assets/connections/telegram.svg" alt=""></a>
+<a title="_nty27_" href="https://twitter.com/_nty27_"><img class="connection-icon" src="domain/assets/assets/connections/twitter.svg" alt=""></a>
+<a title="@𝕤𝕦𝕟𝕟𝕪𝕪.𝕗𝕝𝕠𝕨𝕖𝕣" href="https://www.tiktok.com/@MS4wLjABAAAAo5TPaRBUMHuxnKIhp86nQBhWTR26kHlmtZgurNPjJLjJUOmyC_bIWYb2PHiP-Cvu"><img class="connection-icon" src="domain/assets/assets/connections/tiktok.svg" alt=""></a>
 </div>
 </div>
 </div>
