--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://faggots.cf">
 <meta id="meta-image" property="og:image" content="https://reported.cf/domain/assets/assets/loader.gif">
-<meta content="sipher.sh" property='og:site_name'>
+<meta content="reported.cf" property='og:site_name'>
 <meta name="theme-color" content="#2f3136">
 <style>
             body {
