--- a/index.html
+++ b/index.html
@@ -106,8 +106,15 @@
 </div>
 </div>
 </div>
+<div class="card1">
+<script>setPresence()</script>
+<div id="card1-title" style="color: #fff;" class="card-title"></div>
+<div id="card1-user-profile" style="color: #fff;" class="user-profile">
+<div class="Profile-pic">
+<img class="card1-pfp" src="domain/assets/assets/loader.gif" id="pfp" alt="">
 </div>
-<div class="user-info">
+</div>
+
 <div class="card1-username" style="color: #fff;" id="username"></div>
 <div class="card1-status" style="color: #fff;" id="status"></div>
 <div class="card1-status2" style="color: #fff;" id="status2"></div>
