--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <img class="card1-pfp" src="domain/assets/assets/loader.gif" id="pfp" alt="">
 </div>
 </div>
-
+<div class="user-info">
 <div class="card1-username" style="color: #fff;" id="username"></div>
 <div class="card1-status" style="color: #fff;" id="status"></div>
 <div class="card1-status2" style="color: #fff;" id="status2"></div>
