--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <div class="card-status" style="color: #fff;" id="status"></div>
 <div class="card-status2" style="color: #fff;" id="status2"></div>
 <div class="connections">
-<a title="tsertseness" href="https://instagram.com/tsertseness"><img class="connection-icon" src="domain/assets/assets/connections/ig.svg" alt=""></a>
+<a title="ghostinjection" href="https://www.instagram.com/ghostinjection/"><img class="connection-icon" src="domain/assets/assets/connections/ig.svg" alt=""></a>
 <a id="connection-username" title="" href="https://discord.com/users/617835811232022571/"><img class="connection-icon" src="domain/assets/assets/connections/discord.svg" alt=""></a>
 <a title="marketplacess" href="https://github.com/marketplacess/"><img class="connection-icon" src="domain/assets/assets/connections/github.svg" alt=""></a>
 <a title="dualhooked" href="https://t.me/dualhooked"><img class="connection-icon" src="domain/assets/assets/connections/telegram.svg" alt=""></a>
